--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   position: absolute;
   top: 0px;
   height: 100vh;
+  width: 100vw;
 }
 
 .grid {
@@ -50,8 +51,6 @@ body {
 
 .history-container span:nth-child(2) {
   padding: 15px;
-  position: absolute;
-  top: 0;
   font-size: 24px;
   color: pink;
 }
@@ -254,6 +253,7 @@ body {
 }
 
 .links a {
+  /* width: 100%; */
   margin-bottom: 15px;
   color: #fff;
   font-size: 1.7em;
@@ -283,6 +283,8 @@ body {
 
 .gameMenu {
   display: none;
+  width: 300px;
+  margin: 20% auto 0;
 }
 .history-container {
   display: none;
@@ -298,9 +300,6 @@ body {
   height: 100%;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .modal a {
@@ -308,7 +307,6 @@ body {
   text-align: center;
   opacity: 0.7;
   margin-bottom: 10px;
-  width: 10%;
   padding: 10px;
   background: yellow;
   color: #000;
