--- a/style.css
+++ b/style.css
@@ -1,331 +1,363 @@
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-  background: #000;
-  box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    background: #000;
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh
 }
+
 .mainPage {
-  background: #000;
-  z-index: 5;
-  position: absolute;
-  top: 0px;
-  height: 100vh;
-  width: 100vw;
+    background: #000;
+    z-index: 5;
+    position: absolute;
+    top: 0px;
+    height: 100vh;
+    width: 100vw;
 }
 
 .grid {
-  justify-content: center;
-  display: grid;
-  overflow: hidden;
-  position: relative;
+    justify-content: center;
+    display: grid;
+    overflow: hidden;
+    position: relative;
 }
 
 .pacman {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: yellow;
-  transition: transform 0.2s ease;
-  will-change: transform;
-  transform: translate(425px, 695px);
-  z-index: 2;
-  position: absolute;
-  display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: yellow;
+    transition: transform 0.2s ease;
+    will-change: transform;
+    transform: translate(425px, 695px);
+    z-index: 2;
+    position: absolute;
+    display: block;
 }
+
 .history-container {
-  height: 100vh;
-  width: 100vw;
-  background: #000;
-  display: flex;
-  font-size: 24px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  z-index: 10;
+    height: 100vh;
+    width: 100vw;
+    background: #000;
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    z-index: 10;
+}
+
+.history-container img {
+    width: 100vw;
+    height: auto;
+}
+
+.history-container span {
+    position: absolute;
+    bottom: 5%;
 }
 
 .history-container span:nth-child(2) {
-  padding: 15px;
-  font-size: 24px;
-  color: pink;
+    padding: 15px;
+    font-size: 24px;
+    color: pink;
 }
 
 .pacman-death {
-  animation: mymove 1s;
+    animation: mymove 1s;
 }
 
 @keyframes mymove {
-  0% {
-    width: 15px;
-    height: 15px;
-  }
-  25% {
-    width: 10px;
-    height: 10px;
-  }
-  75% {
-    width: 5px;
-    height: 5px;
-  }
-  100% {
-    width: 0px;
-    height: 0px;
-  }
+    0% {
+        width: 15px;
+        height: 15px;
+    }
+    25% {
+        width: 10px;
+        height: 10px;
+    }
+    75% {
+        width: 5px;
+        height: 5px;
+    }
+    100% {
+        width: 0px;
+        height: 0px;
+    }
 }
+
 .instruction {
-  display: none;
-  color: red;
-  font-size: 24px;
+    display: none;
+    color: red;
+    font-size: 24px;
 }
 
 .pacman_eye {
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  width: 20%;
-  height: 20%;
-  background-color: #000;
-  z-index: 3;
-  border-radius: 50%;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    width: 20%;
+    height: 20%;
+    background-color: #000;
+    z-index: 3;
+    border-radius: 50%;
 }
 
 .pacman_mouth {
-  position: absolute;
-  bottom: 10%;
-  background: #000;
-  left: 1%;
-  bottom: 20%;
-  width: 50%;
-  will-change: transform;
-  height: 25%;
-  border-radius: 0% 50% 50% 50%;
-  z-index: 3;
+    position: absolute;
+    bottom: 10%;
+    background: #000;
+    left: 1%;
+    bottom: 20%;
+    width: 50%;
+    will-change: transform;
+    height: 25%;
+    border-radius: 0% 50% 50% 50%;
+    z-index: 3;
 }
+
 .doorEnemy {
-  background: red;
-  width: 30px;
-  height: 30px;
+    background: red;
+    width: 30px;
+    height: 30px;
 }
+
 .teleport {
-  background-color: blue;
-  width: 30px;
-  height: 30px;
+    background-color: blue;
+    width: 30px;
+    height: 30px;
 }
+
 .coin {
-  position: absolute;
-  left: 35%;
-  top: 35%;
-  width: 25%;
-  height: 25%;
-  background-color: gold;
-  border-radius: 50%;
-  will-change: opacity;
+    position: absolute;
+    left: 35%;
+    top: 35%;
+    width: 25%;
+    height: 25%;
+    background-color: gold;
+    border-radius: 50%;
+    will-change: opacity;
 }
+
 .cookie {
-  position: absolute;
-  left: 15%;
-  top: 15%;
-  width: 70%;
-  height: 70%;
-  background-color: orange;
-  border-radius: 50%;
+    position: absolute;
+    left: 15%;
+    top: 15%;
+    width: 70%;
+    height: 70%;
+    background-color: orange;
+    border-radius: 50%;
 }
+
 .wall {
-  background-color: blue;
-  width: 100%;
-  height: 100%;
+    background-color: blue;
+    width: 100%;
+    height: 100%;
 }
+
 .box {
-  text-align: center;
-  position: relative;
+    text-align: center;
+    position: relative;
 }
+
 #stats {
-  color: #fff;
-  font-size: 24px;
+    color: #fff;
+    font-size: 24px;
 }
+
 .ghost {
-  position: absolute;
-  border: 1px solid black;
-  border-radius: 4px;
-  z-index: 3;
-  width: 22px;
-  height: 22px;
+    position: absolute;
+    border: 1px solid black;
+    border-radius: 4px;
+    z-index: 3;
+    width: 22px;
+    height: 22px;
 }
+
 .pink {
-  will-change: opacity;
-  background: pink;
-  will-change: transform;
-  transform: translate(360px, 420px);
-  transition: transform 0.2s;
+    will-change: opacity;
+    background: pink;
+    will-change: transform;
+    transform: translate(360px, 420px);
+    transition: transform 0.2s;
 }
+
 .orange {
-  will-change: opacity;
-  background: orange;
-  will-change: transform;
-  transform: translate(390px, 420px);
-  transition: transform 0.2s;
+    will-change: opacity;
+    background: orange;
+    will-change: transform;
+    transform: translate(390px, 420px);
+    transition: transform 0.2s;
 }
 
 .red {
-  will-change: opacity;
-  background: red;
-  transform: translate(420px, 420px);
-  transition: transform 0.2s ease;
+    will-change: opacity;
+    background: red;
+    transform: translate(420px, 420px);
+    transition: transform 0.2s ease;
 }
 
 .cyan {
-  will-change: opacity;
-  background: cyan;
-  will-change: transform;
-  transform: translate(450px, 420px);
-  transition: transform 0.2s;
+    will-change: opacity;
+    background: cyan;
+    will-change: transform;
+    transform: translate(450px, 420px);
+    transition: transform 0.2s;
 }
 
 .left_eye {
-  position: absolute;
-  width: 25%;
-  height: 30%;
-  background: #fff;
-  z-index: 3;
-  border: 0.5px solid red;
-  top: 20%;
-  left: 10%;
-  border-radius: 50%;
+    position: absolute;
+    width: 25%;
+    height: 30%;
+    background: #fff;
+    z-index: 3;
+    border: 0.5px solid red;
+    top: 20%;
+    left: 10%;
+    border-radius: 50%;
 }
 
 .left_eye::before {
-  content: "";
-  z-index: -1;
-  position: inherit;
-  width: 80%;
-  height: 60%;
-  bottom: -3%;
-  left: 20%;
-  border-radius: 50% 50% 40% 40%;
-  background: #000;
+    content: "";
+    z-index: -1;
+    position: inherit;
+    width: 80%;
+    height: 60%;
+    bottom: -3%;
+    left: 20%;
+    border-radius: 50% 50% 40% 40%;
+    background: #000;
 }
 
 .right_eye {
-  position: absolute;
-  width: 25%;
-  height: 30%;
-  background: #fff;
-  top: 20%;
-  right: 10%;
-  border: 0.5px solid red;
-  border-radius: 50%;
+    position: absolute;
+    width: 25%;
+    height: 30%;
+    background: #fff;
+    top: 20%;
+    right: 10%;
+    border: 0.5px solid red;
+    border-radius: 50%;
 }
 
 .right_eye::before {
-  content: "";
-  position: inherit;
-  width: 80%;
-  height: 60%;
-  bottom: -3%;
-  left: 20%;
-  border-radius: 50% 50% 40% 40%;
-  background: #000;
+    content: "";
+    position: inherit;
+    width: 80%;
+    height: 60%;
+    bottom: -3%;
+    left: 20%;
+    border-radius: 50% 50% 40% 40%;
+    background: #000;
 }
 
 .scoreBoard {
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  padding: 20px 10px 20px 0px;
-  font-size: 24px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    padding: 20px 10px 20px 0px;
+    font-size: 24px;
 }
 
 .logo {
-  margin: 150px auto;
-  display: flex;
-  justify-content: center;
+    margin: 150px auto;
+    display: flex;
+    justify-content: center;
 }
 
 .logo img {
-  width: 50%;
-  height: auto;
+    width: 50%;
+    height: auto;
 }
 
 .links a {
-  /* width: 100%; */
-  margin-bottom: 15px;
-  color: #fff;
-  font-size: 1.7em;
-  opacity: 1;
-  text-decoration: none;
+    /* width: 100%; */
+    margin-bottom: 15px;
+    color: #fff;
+    font-size: 1.7em;
+    opacity: 1;
+    text-decoration: none;
 }
 
 .links a:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .links {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .menu {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .menu img {
-  width: 25%;
-  height: auto;
+    width: 25%;
+    height: auto;
+}
+
+.faq {
+    position: absolute;
+    top: 5%;
 }
 
 .gameMenu {
-  display: none;
-  width: 300px;
-  margin: 20% auto 0;
+    display: none;
+    width: 400px;
+    margin: 20% auto 0;
 }
+
 .history-container {
-  display: none;
+    display: none;
 }
+
 .modal {
-  display: none;
-  color: #fff;
-  position: fixed;
-  z-index: 4;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    color: #fff;
+    position: fixed;
+    z-index: 4;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal a {
-  font-size: 20px;
-  text-align: center;
-  opacity: 0.7;
-  margin-bottom: 10px;
-  padding: 10px;
-  background: yellow;
-  color: #000;
+    font-size: 20px;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 10px;
+    padding: 10px;
+    background: yellow;
+    color: #000;
 }
 
 .modal a:hover {
-  opacity: 1;
-  cursor: pointer;
+    opacity: 1;
+    cursor: pointer;
 }
 
 .notify {
-  font-size: 28px;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.4);
-  align-items: center;
-  justify-content: center;
-  width: 386px;
-  height: 50px;
-  position: absolute;
-  top: 50%;
-  left: 40%;
-  z-index: 4;
+    font-size: 28px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.4);
+    align-items: center;
+    justify-content: center;
+    width: 386px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    z-index: 4;
 }
