--- a/client/statics/style.css
+++ b/client/statics/style.css
@@ -1,23 +1,29 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     overflow: hidden;
     padding: 0;
     margin: 0;
     background: #000;
     box-sizing: border-box;
+}
+
+#app {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .mainPage {
-    background: #000;
-    z-index: 5;
-    position: absolute;
-    top: 0px;
-    height: 100vh;
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.mainPage img {
+    width: 50%;
 }
 
 .grid {
@@ -66,7 +72,7 @@ body {
 .history-container span:nth-child(2) {
     padding: 15px;
     font-size: 24px;
-    color: pink;
+    color: blue;
 }
 
 .pacman-death {
@@ -236,11 +242,7 @@ body {
     font-size: 24px;
 }
 
-.logo {
-    margin: 150px auto;
-    display: flex;
-    justify-content: center;
-}
+.logo {}
 
 .logo img {
     width: 50%;
@@ -248,7 +250,6 @@ body {
 }
 
 .links a {
-    /* width: 100%; */
     margin-bottom: 15px;
     color: #fff;
     font-size: 1.7em;
@@ -266,13 +267,12 @@ body {
 }
 
 .menu {
-    display: flex;
     align-items: center;
     flex-direction: column;
 }
 
 .menu img {
-    width: 25%;
+    width: 50%;
     height: auto;
 }
 
@@ -325,7 +325,6 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
-    width: 386px;
     height: 50px;
     position: absolute;
     top: 50%;
@@ -333,7 +332,8 @@ body {
     z-index: 4;
 }
 
-#addScore {
-    z-index: 5;
-    color: red;
+.score-container {
+    width: 100vw;
+    height: 100vh;
+    background: #000;
 }
